fix: Set correct height for black card on mobile devices

--- a/client/assets/css/tailwind.css
+++ b/client/assets/css/tailwind.css
@@ -15,7 +15,7 @@ focus {
 
 .page-enter-active,
 .page-leave-active {
-  transition: opacity 0.2s;
+  transition: opacity 0.3s;
 }
 
 .page-enter,
